lab5/out
make[1]: Entering directory '/home/elijah/etc/programs/CMPS104a/cmps104a/lab5'
g++ -std=gnu++17 -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c 3ac.cpp
3ac.cpp: In function ‘ac3* p_arrow(astree*, symbol_table*)’:
3ac.cpp:788:60: error: cannot convert ‘__gnu_cxx::__alloc_traits<std::allocator<astree*>, astree*>::value_type’ {aka ‘astree*’} to ‘symbol_table*’ {aka ‘std::unordered_map<const std::__cxx11::basic_string<char>*, symbol*>*’}
  788 |     ret = new reg(astree_stride(expr->children[0],reg_count);
      |                                                            ^
      |                                                            |
      |                                                            __gnu_cxx::__alloc_traits<std::allocator<astree*>, astree*>::value_type {aka astree*}
3ac.cpp:310:37: note:   initializing argument 1 of ‘std::string* astree_stride(symbol_table*, astree*)’
  310 | string *astree_stride(symbol_table *current,astree *expr){
      |                       ~~~~~~~~~~~~~~^~~~~~~
3ac.cpp:788:60: error: no matching function for call to ‘reg::reg()’
  788 |     ret = new reg(astree_stride(expr->children[0],reg_count);
      |                                                            ^
3ac.cpp:95:1: note: candidate: ‘reg::reg(reg*, const string*, const string*)’
   95 | reg::reg(reg *selection_index_,const string *sname_, const string *field_){
      | ^~~
3ac.cpp:95:1: note:   candidate expects 3 arguments, 0 provided
3ac.cpp:81:1: note: candidate: ‘reg::reg(int)’
   81 | reg::reg(int string_index_){
      | ^~~
3ac.cpp:81:1: note:   candidate expects 1 argument, 0 provided
3ac.cpp:67:1: note: candidate: ‘reg::reg(std::string*, std::string*)’
   67 | reg::reg(string *typesize_, string *szof){
      | ^~~
3ac.cpp:67:1: note:   candidate expects 2 arguments, 0 provided
3ac.cpp:53:1: note: candidate: ‘reg::reg(std::string*, std::vector<reg*>*)’
   53 | reg::reg(string *fname, vector<reg*> *parameters_){
      | ^~~
3ac.cpp:53:1: note:   candidate expects 2 arguments, 0 provided
3ac.cpp:39:1: note: candidate: ‘reg::reg(std::string*, int)’
   39 | reg::reg(string *stride, int reg_number_){
      | ^~~
3ac.cpp:39:1: note:   candidate expects 2 arguments, 0 provided
3ac.cpp:25:1: note: candidate: ‘reg::reg(const string*)’
   25 | reg::reg(const string *ident_){
      | ^~~
3ac.cpp:25:1: note:   candidate expects 1 argument, 0 provided
In file included from 3ac.cpp:1:
3ac.h:27:8: note: candidate: ‘constexpr reg::reg(const reg&)’
   27 | struct reg {
      |        ^~~
3ac.h:27:8: note:   candidate expects 1 argument, 0 provided
make[1]: *** [Makefile:55: 3ac.o] Error 1
make[1]: Leaving directory '/home/elijah/etc/programs/CMPS104a/cmps104a/lab5'
